--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         // 配置 - 请确认这些配置正确
         const CONFIG = {
             GAS_WEB_APP_URL: 'https://script.google.com/macros/s/AKfycbwE9u3I4m_T3QEB6J1DUtYpzHsDdk3xkLIzBxp6i2qRRSvg33sDP6t_bSMKycIpLPU/exec', 
-            LIFF_ID: '2008235894'
+            LIFF_ID: '2008235894-KBlBRgrN'
         };
 
         let currentUserProfile = null;
@@ -554,4 +554,5 @@
         };
     </script>
 </body>
+
 </html>
