--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script>
         // 🔧 配置 - 请替换为您的实际信息
         const CONFIG = {
-            LIFF_ID: '2008235894-KBlBRgrN',
+            LIFF_ID: '2008235894',
             GAS_URL: 'https://script.google.com/macros/s/AKfycbyvMRhQ_cxknZ0zWSYJDZuZbKTkcym-REVZpLAJzAhTlb8CTQcZGJGAqSOWLOfc8KMd/exec'
         };
 
@@ -345,3 +345,4 @@
     </script>
 </body>
 </html>
+
