--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script>
         const CONFIG = {
             LIFF_ID: '2008235894-KBlBRgrN',
-            GAS_WEB_APP_URL: 'https://script.google.com/macros/s/AKfycbw7117oKlf10IOlKMBCRM-xlpPMD42jmu9KWnAHl823Y9iwQaOcUzj8xEtE8NUSHQ5q/exec'
+            GAS_WEB_APP_URL: 'https://member-api.miyavinail.workers.dev'
         };
 
         // 初始化LIFF
@@ -257,4 +257,5 @@
     </script>
 </body>
 </html>
+
 
