--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         // 配置 - 使用新的后端Worker
         const CONFIG = {
             LIFF_ID: '2008235894-KBlBRgrN',
-            GAS_WEB_APP_URL: 'https://member-api.miyavinail.workers.dev'
+            GAS_WEB_APP_URL: 'https://member-api.miyavinail.workers.dev/'
         };
 
         let currentUserProfile = null;
@@ -256,3 +256,4 @@
     </script>
 </body>
 </html>
+
